Corpus français standard
- ajout de phrases issues des procurations de foi pour la présidentielle
- mise à jour et complétion des annotations en entités nommées

--- a/vfs/annotation.conf
+++ b/vfs/annotation.conf
@@ -1,26 +1,51 @@
 [entities]
 
+Inclusif
+Exclusif
+
+Adresse
 Age
+Cp
 Date
+Gentile
 Id
 Lieu
+Mail
 Organisation
+Pays
 Personne
+Profession
+Fonction
 Telephone
-Adresse
-Cp
+URL
 Ville
 
+Anatomie
+Dose
+Duree
+Examen
+Frequence
+Mode
+Organisme
+Pathologie
+Sosy
+Substance
+Traitement
+Valeur
+
+Autre
 
 [attributes]
 
 categorie	Arg:Id, Value:email|numero
-type	Arg:Lieu, Value:adresse|ville
-role	Arg:Personne, Value:patient|soignant|autre|inconnu
+type	Arg:Lieu, Value:adresse|ville|region|pays|continent
+role	Arg:Personne, Value:patient|soignant|famille|autre|inconnu
+classe	Arg:Autre, Value:epoque|langue|lieu|prix|surnom|telephone|titre
+procede	Arg:Inclusif|Exclusif, Value:coordination|feminisation|flexion|genre
 
 [relations]
 
-<OVERLAP> Arg1:Age|Date|Id|Lieu|Organisation|Personne|Telephone|Adresse|Cp|Ville,Arg2:Age|Date|Id|Lieu|Organisation|Personne|Telephone|Adresse|Cp|Ville, <OVL-TYPE>:contain|equal|cross
+<OVERLAP> Arg1:Inclusif|Exclusif|Adresse|Age|Cp|Date|Faux|Id|Lieu|Mail|Gentile|Organisation|Pays|Personne|Profession|Fonction|Telephone|Ville|Anatomie|Dose|Duree|Examen|Frequence|Mode|Organisme|Pathologie|Sosy|Substance|Traitement|URL|Valeur|Autre,Arg2:Inclusif|Exclusif|Adresse|Age|Cp|Date|Faux|Id|Lieu|Mail|Gentile|Organisation|Pays|Personne|Profession|Fonction|Telephone|Ville|Anatomie|Dose|Duree|Examen|Frequence|Mode|Organisme|Pathologie|Sosy|Substance|Traitement|URL|Valeur|Autre, <OVL-TYPE>:contain|equal|cross
 
 
 [events]
