--- a/vfs/kb_shortcuts.conf
+++ b/vfs/kb_shortcuts.conf
@@ -1,10 +1,26 @@
 A	Age
+B	Substance
 C	Cp
 D	Date
+E	Autre
+F	Mode
+G	Gentile
+H	Pathologie
 I	Id
+J	Profession
+K	Dose
 L	Lieu
+M	Mail
+N	Anatomie
 O	Organisation
 P	Personne
+Q	Frequence
+R	Traitement
 S	Adresse
 T	Telephone
+U	Duree
 V	Ville
+W	Valeur
+X	Examen
+Y	Sosy
+Z	Organisme
