--- a/vfs/visual.conf
+++ b/vfs/visual.conf
@@ -1,25 +1,71 @@
 [labels]
 
+Inclusif | Français inclusif | Incl
+Exclusif | Français exclusif | Excl
+
+Adresse | Adresse | Adr
 Age | Age | Age
+Cp | Code postal | CP
 Date | Date | Date
 Id | Identifiant | Id
 Lieu | Lieu | Lieu
-Personne | Personne | Pers
+Mail | e-mail | Mail
+Gentile | Gentilé | Gent
 Organisation | Organisation | Org
+Pays | Pays | Pays
+Personne | Personne | Pers
+Profession | Profession | Pro
+Fonction | Fonction | Fct
 Telephone | Téléphone | Tel
-Adresse | Adresse | Adr
-Cp | CP | Code
-Ville | Ville | Vil
+URL | URL | URL
+Ville | Ville | Ville
 
+Anatomie | Anatomie | Anat
+Dose | Dose | Dos
+Duree | Durée | Dur
+Examen | Examen | Exam
+Mode | Mode | Mod
+Organisme | Organisme | Org
+Pathologie | Pathologie | Patho
+Sosy | Signe ou symptôme | Sosy
+Substance | Substance | Sub
+Traitement | Traitement | Trt
+Valeur | Valeur | Val
+
+Autre | Autre | AUT
 
 [drawing]
+Inclusif	bgColor:#99cc99
+Exclusif	bgColor:#cc9999
+
+Adresse	bgColor:#ff9999
 Age	bgColor:#dd99aa
+Cp	bgColor:#ffcc99
 Date	bgColor:#99dddd
 Id	bgColor:#9999cc
-Lieu	bgColor:#ff9999
+Lieu	bgColor:#ddddff
+Mail	bgColor:#cc9933
+Gentile	bgColor:#ffddff
 Organisation	bgColor:#ddaadd
+Pays	bgColor:#ddddff
 Personne	bgColor:#ddffaa
+Profession	bgColor:#ffff99
+Fonction	bgColor:#ffff99
 Telephone	bgColor:#ffddaa
-Adresse	bgColor:#ffddff
-Cp	bgColor:#ffaaff
-Ville	bgColor:#dd99dd
+URL	bgColor:#ccaa44
+Ville	bgColor:#ffddaa
+
+Anatomie	bgColor:#ddaa77
+Dose	bgColor:#ddddff
+Duree	bgColor:#ccaaee
+Examen	bgColor:#cccc99
+Frequence	bgColor:#ffffff
+Mode	bgColor:#eeeeff
+Organisme	bgColor:#eebb66
+Pathologie	bgColor:#ff9999
+Sosy	bgColor:#ffbbcc
+Substance	bgColor:#ccccff
+Traitement	bgColor:#99cc99
+Valeur	bgColor:#ccffee
+
+Autre	bgColor:#dddddd
