--- a/vfi/visual.conf
+++ b/vfi/visual.conf
@@ -1,10 +1,8 @@
 [labels]
 
-Inclusif | Français inclusif | Incl
-Exclusif | Français exclusif | Excl
-
 Adresse | Adresse | Adr
 Age | Age | Age
+Cedex | Cedex | Cdx
 Cp | Code postal | CP
 Date | Date | Date
 Id | Identifiant | Id
@@ -33,11 +31,12 @@ Traitement | Traitement | Trt
 Valeur | Valeur | Val
 
 Autre | Autre | AUT
+Titre | Titre | TIT
+Section | Section | SEC
+Inclusif | Français inclusif | Incl
+Standard | Français standard | Stand
 
 [drawing]
-Inclusif	bgColor:#99cc99
-Exclusif	bgColor:#cc9999
-
 Adresse	bgColor:#ff9999
 Age	bgColor:#dd99aa
 Cp	bgColor:#ffcc99
@@ -69,3 +68,7 @@ Traitement	bgColor:#99cc99
 Valeur	bgColor:#ccffee
 
 Autre	bgColor:#dddddd
+Titre	bgColor:#dddddd
+Section	bgColor:#dddddd
+Inclusif	bgColor:#99cc99
+Standard	bgColor:#cc9999
