--- a/vfs/annotation.conf
+++ b/vfs/annotation.conf
@@ -1,10 +1,8 @@
 [entities]
 
-Inclusif
-Exclusif
-
 Adresse
 Age
+Cedex
 Cp
 Date
 Gentile
@@ -33,7 +31,12 @@ Substance
 Traitement
 Valeur
 
+Inclusif
+Standard
+
 Autre
+Titre
+Section
 
 [attributes]
 
@@ -41,11 +44,11 @@ categorie	Arg:Id, Value:email|numero
 type	Arg:Lieu, Value:adresse|ville|region|pays|continent
 role	Arg:Personne, Value:patient|soignant|famille|autre|inconnu
 classe	Arg:Autre, Value:epoque|langue|lieu|prix|surnom|telephone|titre
-procede	Arg:Inclusif|Exclusif, Value:coordination|feminisation|flexion|genre
+procede	Arg:Inclusif|Standard, Value:coordination|feminisation|flexion|genre|epicene
 
 [relations]
 
-<OVERLAP> Arg1:Inclusif|Exclusif|Adresse|Age|Cp|Date|Faux|Id|Lieu|Mail|Gentile|Organisation|Pays|Personne|Profession|Fonction|Telephone|Ville|Anatomie|Dose|Duree|Examen|Frequence|Mode|Organisme|Pathologie|Sosy|Substance|Traitement|URL|Valeur|Autre,Arg2:Inclusif|Exclusif|Adresse|Age|Cp|Date|Faux|Id|Lieu|Mail|Gentile|Organisation|Pays|Personne|Profession|Fonction|Telephone|Ville|Anatomie|Dose|Duree|Examen|Frequence|Mode|Organisme|Pathologie|Sosy|Substance|Traitement|URL|Valeur|Autre, <OVL-TYPE>:contain|equal|cross
+<OVERLAP> Arg1:Inclusif|Standard|Adresse|Age|Cedex|Cp|Date|Faux|Id|Lieu|Mail|Gentile|Organisation|Pays|Personne|Profession|Fonction|Telephone|Ville|Anatomie|Dose|Duree|Examen|Frequence|Mode|Organisme|Pathologie|Sosy|Substance|Traitement|URL|Valeur|Autre|Titre|Section,Arg2:Inclusif|Standard|Adresse|Age|Cedex|Cp|Date|Faux|Id|Lieu|Mail|Gentile|Organisation|Pays|Personne|Profession|Fonction|Telephone|Ville|Anatomie|Dose|Duree|Examen|Frequence|Mode|Organisme|Pathologie|Sosy|Substance|Traitement|URL|Valeur|Autre|Titre|Section, <OVL-TYPE>:contain|equal|cross
 
 
 [events]
